# ros-motion-plainning

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
3rd/: FindCeres.cmake  FindEigen3.cmake  FindLibLZMA.cmake  FindZLIB.cmake  Findgflags.cmake  Findglog.cmake  Findlibunwind.cmake  Findosqp.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/dynamic_rviz_config/: rviz_generate.py
devel/lib/pkgconfig/: common.pc  controller.pc  dwa_controller.pc  dynamic_rviz_config.pc  dynamic_xml_config.pc  gazebo_ped_visualizer_plugin.pc  gazebo_sfm_plugin.pc  move_base_cfg.pc  path_planner.pc  path_processor.pc  pedsim_msgs.pc  rpp_controller.pc  sim_env.pc  spencer_control_msgs.pc  spencer_human_attribute_msgs.pc  spencer_social_relation_msgs.pc  spencer_tracking_msgs.pc  spencer_tracking_rviz_plugin.pc  spencer_vision_msgs.pc  trajectory_planner.pc  voronoi_layer.pc
devel/share/common/cmake/: commonConfig.cmake
devel/share/controller/cmake/: controllerConfig.cmake
devel/share/dwa_controller/cmake/: dwa_controllerConfig.cmake
devel/share/dynamic_rviz_config/cmake/: dynamic_rviz_configConfig.cmake
devel/share/dynamic_xml_config/cmake/: dynamic_xml_configConfig.cmake
devel/share/gazebo_ped_visualizer_plugin/cmake/: gazebo_ped_visualizer_pluginConfig.cmake
devel/share/sim_env/cmake/: sim_envConfig.cmake
scripts/: build.sh  main.sh
src/core/common/: CMakeLists.txt  package.xml
src/core/path_planner/path_processor/: CMakeLists.txt  package.xml
src/core/path_planner/path_processor/include/path_planner/path_processor/: path_processor.h
src/core/path_planner/path_processor/include/path_planner/path_prune/: ramer_douglas_peucker.h
src/core/path_planner/path_processor/src/path_processor/: path_processor.cpp
src/core/path_planner/path_processor/src/path_prune/: ramer_douglas_peucker.cpp
src/core/trajectory_planner/: CMakeLists.txt
src/core/trajectory_planner/include/trajectory_planner/trajectory_generation/: cubic_bezier_generator.h  generator.h
src/core/trajectory_planner/src/trajectory_generation/: cubic_bezier_generator.cpp  generator.cpp
src/move_base_cfg/: CMakeLists.txt  package.xml
src/move_base_cfg/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/move_base_cfg/launch/: move_base.launch
src/sim_env/config/: move_base_params.yaml
src/sim_env/launch/: mapping.launch
src/sim_env/rviz/: gmapping.rviz  sim_env.rviz
src/sim_env/worlds/: empty_with_pedestrians.world  museum_with_pedestrians.world  warehouse.world  warehouse_with_pedestrians.world
src/user_config/: pedestrian_config.yaml  user_config.yaml  user_config_multi.yaml
(+79 files in other folders)
