<?xml version="1.0"?>
<package format="2">
  <name>move_base_cfg</name>
  <version>0.0.0</version>
  <description>The move_base_cfg package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>

</package>
